I tested 0.4.13-RC-49-g1e5d33b gcc dbg linux (a carrier releaser build).
On VBox 4.3.12 with 1500MB of RAM spent to VM.
Reproduction steps
- I had the taskmgr in processes tab running to observe resource consumption
- I used git from rapps, and RosBE2.1.6 from rapps
- 'git config --system http.sslverify false' succeeded
- 'git clone https://github.com/reactos/reactos.git' succeeded, I received 0.4.14-dev-1138-g35cb8f1
- 'configure' succeeded
I do not 100% remember whether it was during 'git clone' or during 'configure', but I got a continuable WIN32SS assertion of the kind:
*** Assertion failed: (pti->pcti->fsChangeBits & QS_SENDMESSAGE) == 0
|
*** Source File: ../win32ss/user/ntuser/misc.c, line 729
|
|
Break repeatedly, break Once, Ignore, terminate Process or terminate Thread (boipt)?
|
kdb:> b
|
Execute '.cxr F6D8036C' to dump context
|
[7h
|
Entered debugger on embedded INT3 at 0x0008:0x80956662.
|
kdb:> bt
|
Eip:
|
<ntoskrnl.exe:156663 (sdk/lib/rtl/i386/debug_asm.S:34 (DbgBreakPoint))>
|
Frames:
|
<win32k.sys:5aede (win32ss/user/ntuser/misc.c:729 (UserDbgAssertThreadInfo))>
|
<win32k.sys:5af6c (win32ss/user/ntuser/misc.c:757 (UserDbgPreServiceHook))>
|
<win32k.sys:18d3b (win32ss/user/ntuser/main.c:43 (DbgPreServiceHook))>
|
<ntoskrnl.exe:13aaf0 (ntoskrnl/ke/i386/traphdlr.c:1657 (KiSystemServiceHandler))>
|
<ntoskrnl.exe:3d1f (:0 (KiSystemService))>
|
<ntdll.dll:fc08 (dll/ntdll/dispatch/i386/dispatch.S:251 (KiIntSystemCall))>
|
<comctl32.dll:8f18b (dll/win32/comctl32/toolbar.c:6957 (ToolbarWindowProc))>
|
<comctl32.dll:91c43 (dll/win32/comctl32/toolbar.c:7206 (ToolbarV6WindowProc))>
|
<user32.dll:64039 (win32ss/user/user32/windows/wndproc_fixup.S:44 (CALL_EXTERN_WNDPROC))>
|
<user32.dll:58274 (win32ss/user/user32/windows/message.c:1542 (IntCallWindowProcW))>
|
<user32.dll:58890 (win32ss/user/user32/windows/message.c:1851 (CallWindowProcW))>
|
<explorer.exe:2c94e (sdk/lib/atl/atlwin.h:1526 (CWindowImplBaseT<CToolbar<InternalIconData>, ATL::CWinTraits<1442840576ul, 0ul> >::WindowProc))>
|
<user32.dll:64039 (win32ss/user/user32/windows/wndproc_fixup.S:44 (CALL_EXTERN_WNDPROC))>
|
<user32.dll:58274 (win32ss/user/user32/windows/message.c:1542 (IntCallWindowProcW))>
|
<user32.dll:58671 (win32ss/user/user32/windows/message.c:1777 (IntCallMessageProc))>
|
<user32.dll:59243 (win32ss/user/user32/windows/message.c:2382 (SendMessageW))>
|
<explorer.exe:850a (sdk/lib/atl/atlwin.h:1051 (CNotifyToolbar::UpdateButton))>
|
<explorer.exe:8679 (base/shell/explorer/syspager.cpp:1344 (CSysPagerWnd::NotifyIcon))>
|
<explorer.exe:87cd (base/shell/explorer/syspager.cpp:1542 (CSysPagerWnd::OnCopyData))>
|
<explorer.exe:21c32 (base/shell/explorer/syspager.cpp:251 (CSysPagerWnd::ProcessWindowMessage))>--- Press q to abort, any other key to continue ---
|
|
<explorer.exe:2caba (sdk/lib/atl/atlwin.h:1564 (CWindowImplBaseT<ATL::CWindow, ATL::CWinTraits<1442840576ul, 0ul> >::WindowProc))>
|
<user32.dll:64039 (win32ss/user/user32/windows/wndproc_fixup.S:44 (CALL_EXTERN_WNDPROC))>
|
<user32.dll:58274 (win32ss/user/user32/windows/message.c:1542 (IntCallWindowProcW))>
|
<user32.dll:58671 (win32ss/user/user32/windows/message.c:1777 (IntCallMessageProc))>
|
<user32.dll:59243 (win32ss/user/user32/windows/message.c:2382 (SendMessageW))>
|
<explorer.exe:28197 (sdk/lib/atl/atlwin.h:1057 (CTrayNotifyWnd::ProcessWindowMessage))>
|
<explorer.exe:2caba (sdk/lib/atl/atlwin.h:1564 (CWindowImplBaseT<ATL::CWindow, ATL::CWinTraits<1442840576ul, 0ul> >::WindowProc))>
|
<user32.dll:64039 (win32ss/user/user32/windows/wndproc_fixup.S:44 (CALL_EXTERN_WNDPROC))>
|
<user32.dll:58274 (win32ss/user/user32/windows/message.c:1542 (IntCallWindowProcW))>
|
<user32.dll:58671 (win32ss/user/user32/windows/message.c:1777 (IntCallMessageProc))>
|
<user32.dll:59243 (win32ss/user/user32/windows/message.c:2382 (SendMessageW))>
|
<explorer.exe:1d500 (base/shell/explorer/traywnd.cpp:2345 (CTrayWindow::ProcessWindowMessage))>
|
<explorer.exe:2caba (sdk/lib/atl/atlwin.h:1564 (CWindowImplBaseT<ATL::CWindow, ATL::CWinTraits<1442840576ul, 0ul> >::WindowProc))>
|
<user32.dll:64039 (win32ss/user/user32/windows/wndproc_fixup.S:44 (CALL_EXTERN_WNDPROC))>
|
<user32.dll:58274 (win32ss/user/user32/windows/message.c:1542 (IntCallWindowProcW))>
|
<user32.dll:5a17c (win32ss/user/user32/windows/message.c:2984 (User32CallWindowProcFromKernel))>
|
<ntdll.dll:fb60 (dll/ntdll/dispatch/i386/dispatch.S:136 (KiUserCallbackDispatcher))>
|
<explorer.exe:c398 (base/shell/explorer/traywnd.cpp:3163 (TrayMessageLoop))>
|
<explorer.exe:1725 (base/shell/explorer/explorer.cpp:174 (StartWithDesktop))>
|
<explorer.exe:18ca (base/shell/explorer/explorer.cpp:223 (wWinMain))>
|
<explorer.exe:17668 (sdk/lib/crt/startup/crt0_w.c:24 (wmain))>--- Press q to abort, any other key to continue ---
|
|
<explorer.exe:1684c (sdk/lib/crt/startup/crtexe.c:312 (__tmainCRTStartup))>
|
<explorer.exe:16895 (sdk/lib/crt/startup/crtexe.c:172 (wWinMainCRTStartup))>
|
<kernel32.dll:11722 (dll/win32/kernel32/client/proc.c:457 (BaseProcessStartup))>
|
0.4.13-RC-49-g1e5d33b_rosOnRos_buildlog.log
If I remember correctly, I have seen this one when testing this for the 0.4.12release already. It was also continuable back then.