[0.4.14][WIN32SS] Remove an ambiguous assert entirely CORE-16738

It popped up very reliably when performing git-clone of the ros sources
while having the taskmgr open in the processes-tab.
Or when building 'ninja bootcd -j1' while having the taskmgr open in the processes-tab.

It is always possible to ignore it and then continue using ros for days without
noticing any side effects.
James Tabor judged the assert to have a "questionable logic".
Giannis who once added it, was also ok with commenting it.

His words:
This assertion isn't something fatal,
the worst thing that can happen from continuing on it would be
to make the thread get awake more times than it should.

The assert was once added by SVN r63880 == git 9ad857369a07eb8d84350c4680fa3ea373a818e3

It was commented out already via 0.4.14-dev-1519-g 87f6c82d854583f71546841f4432f57e4a2d6c99 (2020-04-21)
Final Removal picked from 0.4.15-dev-3780-g bf164353035a2bc0f0d1d679d09f2e4076498fa1 (2022-02-05)